--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/unity"]
 	path = lib/unity
 	url = https://github.com/ThrowTheSwitch/Unity.git
+[submodule "projects/project_template"]
+	path = projects/project_template
+	url = https://github.com/sdg2DieUpm/c_cross_template.git
